# nhl-rest-api-1.00-python-1.0.0

./: .manifest.json  README.md  install.cmd  install.sh  pyproject.toml
documentation/models/: Conference.md  Conferences.md  Division.md  Divisions.md  Draft.md  DraftProspect.md  DraftProspects.md  Franchise.md  Game.md  GameBoxscore.md  GameBoxscoreTeam.md  GameBoxscores.md  GameContent.md  GameDecisionPlayer.md  GameEditorial.md  GameEditorialKeyword.md  GameEditorials.md  GameHighlight.md  GameHighlights.md  GameHighlightsGameCenter2.md  GameLinescore.md  GameLinescoreTeam.md  GameOfficial.md  GamePeriod.md  GamePlay.md  GetPlayerStatsStats.md  GetScheduleExpand.md  GetStandingsByTypeType.md  GetTeamsExpand.md  Photo.md  Player.md  PlayerStats.md  Players.md  Roster.md  Rosters.md  Schedule.md  ScheduleDay.md  ScheduleGame.md  StandingTypes.md  Standings.md  (+5 more)
documentation/services/: ClubStatsService.md  ConferencesService.md  DivisionsService.md  DraftService.md  GamesService.md  GoalieStatsService.md  PlayerService.md  PlayerSpotlightService.md  PlayersService.md  RosterService.md  ScheduleService.md  ScoreboardService.md  SkaterStatsService.md  StandingsService.md  StatsService.md  TeamsService.md
examples/: install.cmd  install.sh  sample.py
src/nhl/: __init__.py
src/nhl.egg-info/: PKG-INFO  SOURCES.txt
src/nhl/net/environment/: environment.py
src/nhl/services/: club_stats.py  goalie_stats.py  player.py  scoreboard.py
