[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "nhl-client"
version = "1.0.0"
description = """This section provides documentation for the NHL Web API. Based on the unofficial documentation https://github.com/Zmalski/NHL-API-Reference"""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0"
]
